# bazel-ruleset-demo

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
examples/simple/: BUILD.bazel
examples/with_deps/: BUILD.bazel  a.c  a.h  a_bin.c  b.c  b.h  b_bin.c  c.c  c.h  c_bin.c  cpuid_example.c  cpuid_example.h  with_deps.c  with_deps.h
rules_c/: 01_monolithic.bzl  03_reuse.bzl  README.md  defs.bzl  headers.bzl
